--- a/styless.css
+++ b/styless.css
@@ -13,7 +13,6 @@
         width: 100%;
     }
     .navbar-links {
-        flex-direction: column;
         align-items: stretch;
         width: 100%;
         gap: 10px;
@@ -21,10 +20,10 @@
     
     .navlink-button {
         justify-content: center;
-        padding: 10px;
+        padding: 10px 5px;
         font-size: 1em;
         border-radius: 12px;
-        width: auto;
+        width: fit-content;
         background-color: #fbf5f3;
         transition: background-color 0.3s ease, transform 0.2s ease;
     }
@@ -35,8 +34,8 @@
     }
     
     .navlink-button img {
-        width: 22px;
-        height: 22px;
+        width: 18px;
+        height: 18px;
     }
 
     .main-text {
