--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
-    display: flex;
     margin: 0;
     overflow-x: hidden;
     font-family: 'Georgia', serif;
@@ -19,6 +18,7 @@ body {
     align-items: center;
     color: white;
     background-color: #6b1c3a;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
     padding: 0px 20px;
 }
@@ -46,6 +46,7 @@ body {
     padding: 8px 16px;
     border-radius: 10px;
     color: #6b1c3a;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     font-weight: bold;
     transition: background-color 0.3s ease, transform 0.2s ease;
     cursor: pointer;
@@ -353,4 +354,17 @@ footer {
 
 .footer-icon i {
     margin-right: 8px;
+}
+.footer-icon ul{
+    justify-content: left;
+    text-align: left;
+}
+.footer-section li{
+    justify-content: left;
+    text-align: left;
+    color: black;
+    margin-bottom: 5px;
+}
+.footer-section span{
+    color: black;
 }
